--- a/package.json
+++ b/package.json
@@ -22,6 +22,9 @@
     "react-router-dom": "^6.4.3"
   },
   "devDependencies": {
-    "nodemon": "^2.0.20"
+    "autoprefixer": "^10.4.13",
+    "nodemon": "^2.0.20",
+    "postcss": "^8.4.18",
+    "tailwindcss": "^3.2.2"
   }
 }
