--- a/package.json
+++ b/package.json
@@ -19,12 +19,13 @@
     "express-async-handler": "^1.2.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.7.0",
+    "react-icons": "^4.6.0",
     "react-router-dom": "^6.4.3"
   },
   "devDependencies": {
+    "@tailwindcss/forms": "^0.5.3",
     "autoprefixer": "^10.4.13",
     "nodemon": "^2.0.20",
-    "postcss": "^8.4.18",
-    "tailwindcss": "^3.2.2"
+    "postcss": "^8.4.18"
   }
 }
