--- a/package.json
+++ b/package.json
@@ -15,12 +15,15 @@
     "axios": "^1.1.3",
     "bcrypt": "^5.1.0",
     "bcryptjs": "^2.4.3",
+    "body-parser": "^1.20.1",
     "colors": "^1.4.0",
     "concurrently": "^7.5.0",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-async-handler": "^1.2.0",
+    "express-session": "^1.17.3",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.7.0",
     "react-icons": "^4.6.0",
