--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "mongoose": "^6.7.0",
     "react-icons": "^4.6.0",
     "react-router-dom": "^6.4.3",
-    "react-toastify": "^9.1.1"
+    "react-toastify": "^9.1.1",
+    "universal-cookie": "^4.0.4"
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.3",
