--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "client": "npm start --prefix frontend",
     "clientinstall": "npm install --prefix client",
     "dev": "concurrently \"npm run server\" \"npm run client\"",
-    "render-postbuild":"npm install && npm run dev"
+    "render-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client"
   },
   "author": "Prem Kumar",
   "license": "ISC",
