--- a/package.json
+++ b/package.json
@@ -1,4 +1,4 @@
-{"homepage": "https://premforreal.github.io/mern-Goals", 
+{"homepage": "https://premforreal.github.io/mern-Goals/",
   "name": "frontend",
   "version": "0.1.0",
   "private": true,
